objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>ABC__c</fullName>
        <formula>IF(ISPICKVAL(StageName, &apos;Prospecting&apos;) , Amount * Probability,
IF(ISPICKVAL(StageName, &apos;Qualification&apos;) , Amount * Probability,
IF(ISPICKVAL(StageName, &apos;Proposal Preparation&apos;) , Amount * Probability,
IF(ISPICKVAL(StageName, &apos;Proposal on Desk&apos;) , Amount * Probability,
IF(ISPICKVAL(StageName, &apos;Negotation / Shortlist&apos;) , Amount * Probability,
IF(ISPICKVAL(StageName, &apos;Verbal&apos;) , Amount * Probability,
IF(ISPICKVAL(StageName, &apos;Signed&apos;) , Amount * 1,
0
)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ABC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei Darussalam</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Cayman Islands</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Christmas Island</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Cook Islands</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>CuraÃƒÂ§ao</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Dominica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Owner__c</fullName>
        <formula>IF(Owner.Id= $User.Id, &apos;True&apos;, &apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <description>Displays the percentage that will be subtracted from the total amount of the opportunity.</description>
        <inlineHelpText>If the customer is getting a discount on this opportunity, enter the amount here. For example, if the discount is ten percent, enter the whole number 10.</inlineHelpText>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discounted_Amount__c</fullName>
        <description>Calculates the opportunity amount after any discount has been applied.</description>
        <formula>Amount * ( 1 - Discount_Percentage__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity amount after discount has been applied.</inlineHelpText>
        <label>Discounted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dummy_Total_Revenue__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Dummy Total Revenue</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Percentage_1__c</fullName>
        <label>Expected Percentage 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Expected_Percentage</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Percentage_2__c</fullName>
        <label>Expected Percentage 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Expected_Percentage</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Percentage_3__c</fullName>
        <label>Expected Percentage 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Expected_Percentage</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <defaultValue>&apos;Agriculture&apos;</defaultValue>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Industry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MileStones_Revenue1__c</fullName>
        <formula>(  VALUE(TEXT(Expected_Percentage_1__c) ) /100 )* Amount</formula>
        <label>MileStones Revenue 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MileStones_Revenue2__c</fullName>
        <formula>( VALUE(TEXT(Expected_Percentage_2__c) ) /100 )* Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MileStones Revenue 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MileStones_Revenue3__c</fullName>
        <formula>( VALUE(TEXT(Expected_Percentage_3__c) ) /100 )* Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MileStones Revenue 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month_Amount__c</fullName>
        <formula>Amount/FLOOR(IF( 

(CloseDate - TODAY()) / 365 * 12 &lt; 1, 1, (CloseDate - TODAY()) / 365 * 12
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Date_1__c</fullName>
        <label>Payment Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Date_2__c</fullName>
        <label>Payment Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Date_3__c</fullName>
        <label>Payment Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <label>Project Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Collected_Progess__c</fullName>
        <formula>IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Green&quot;,  11, ((Total_Milestone_Revenue__c/Amount  ) * 100))
&amp;IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;Yellow&quot;,11, (100 - (100 *
(Total_Milestone_Revenue__c/Amount ) ))) &amp;
&apos;&apos;
&amp; TEXT(ROUND((Total_Milestone_Revenue__c/Amount )*100,0))
&amp; &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Collected Progess</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Collected__c</fullName>
        <formula>IF(  Payment_Date_3__c &lt;  TODAY()   ,  MileStones_Revenue3__c ,  IF(Payment_Date_2__c &lt;  TODAY(), MileStones_Revenue2__c ,  IF(Payment_Date_1__c &lt;  TODAY(), MileStones_Revenue1__c , 0) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Collected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Milestone_Revenue__c</fullName>
        <description>This field will be updated by Process Builder to calculate for Progress bar</description>
        <label>Total Milestone Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Rev__c</fullName>
        <formula>if(Today() &gt;= Payment_Date_3__c, MileStones_Revenue3__c+MileStones_Revenue2__c + MileStones_Revenue1__c,
if(Today() &gt;= Payment_Date_2__c, MileStones_Revenue1__c + MileStones_Revenue2__c,
if(Today() &gt;= Payment_Date_1__c, MileStones_Revenue1__c,
MileStones_Revenue3__c+MileStones_Revenue2__c + MileStones_Revenue1__c
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Mile Stone Total Revenue</inlineHelpText>
        <label>Mile Stone Total Revnue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Project_ID</fullName>
        <active>true</active>
        <description>Project Code should be in the format - &quot;ABCDEF-ABCD-0000-000&quot;</description>
        <errorConditionFormula>NOT( OR( ISBLANK(Project_Code__c), REGEX( Project_Code__c , &quot;[A-Z]{6}-[A-Z]{4}-[0-9]{4}-[0-9]{3}&quot;)))</errorConditionFormula>
        <errorMessage>Project Code should be in the format - &quot;ABCDEF-ABCD-0000-000&quot;
Please set Caps Lock on</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_Percentage_exceeds_100</fullName>
        <active>false</active>
        <errorConditionFormula>((Total_Milestone_Revenue__c/Amount ) * 100) &gt;60</errorConditionFormula>
        <errorMessage>Total percentage Exceeds, Please check Percentage</errorMessage>
    </validationRules>
</CustomObject>